//
// Created by laptop on 11/12/23.
//

#pragma once

class RoundCompatible {
public:
    virtual double getRadius() const = 0;
};
